--- a/app.json
+++ b/app.json
@@ -18,13 +18,23 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.lahori.food",
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "com.googleusercontent.apps.620279660896-i6dsmf2fp6sibq74kaufbsehfkkqu4tn"
+        }
+      },
+        "googleServicesFile": "./GoogleService-Info.plist"
     },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.rs.lahori",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
