--- a/package.json
+++ b/package.json
@@ -10,15 +10,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-cli": "^6.0.5",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "~10.2.0",
+    "expo-random": "^12.3.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
+    "expo-web-browser": "^11.0.0",
+    "firebase": "^9.9.2",
+    "formik": "^2.2.9",
+    "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-restart": "^0.0.24",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "tailwind-rn": "^4.2.0",
+    "tslib": "^2.4.0",
+    "twrnc": "^3.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5"
   },
   "private": true
 }
